--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 </head>
 <body>
 <main>
-
+    <div class="container">
+        <div class="one">
+            <img src="images/illustration-mockups.svg" alt="">
+        </div>
+        <div class="two">
+            <h1>Build The Community Your Fans Will Love</h1>
+            <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+                Create connections with your users as you engage in genuine discussion.</p>
+            <button>Register</button>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+        </div>
+    </div>
 </main>
 </body>
 </html>
