--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 <main>
     <div class="container">
+        <img class="logo" src="images/logo.svg" alt="">
         <div class="one">
             <img src="images/illustration-mockups.svg" alt="">
         </div>
@@ -24,9 +25,11 @@
             <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
                 Create connections with your users as you engage in genuine discussion.</p>
             <button>Register</button>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
+            <div class="icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
         </div>
     </div>
 </main>
